# taskRecorderGUI

./: CMakeLists.txt  README.md  taskRecorderGUI.cpp
application/: recordTasks.xml
context/taskRecorder/: taskRecorder.ini
